--- a/labEditingTableViews/labEditingTableViews/Base.lproj/Main.storyboard
+++ b/labEditingTableViews/labEditingTableViews/Base.lproj/Main.storyboard
@@ -58,7 +58,28 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="QAy-Ma-glg"/>
                     </view>
-                    <navigationItem key="navigationItem" id="g5A-Td-IbL"/>
+                    <navigationItem key="navigationItem" id="g5A-Td-IbL">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="l1L-dI-jDJ">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="t2q-Rr-o7X">
+                                <rect key="frame" x="20" y="7" width="92" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Delete"/>
+                                <connections>
+                                    <action selector="deleteItemButton:" destination="eVl-cc-yC0" eventType="touchUpInside" id="TzV-C2-7IN"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="7qY-Le-j8k">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Puu-dA-fOM">
+                                <rect key="frame" x="302" y="7" width="92" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Add"/>
+                                <connections>
+                                    <segue destination="9FI-i6-w2N" kind="show" id="7yh-Am-68L"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="shoppingTableView" destination="Meh-fH-yFz" id="5p4-me-CPD"/>
                     </connections>
@@ -66,6 +87,71 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="axL-ck-yYW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1089.8550724637682" y="120.53571428571428"/>
+        </scene>
+        <!--NewItemViewController-->
+        <scene sceneID="WvB-Sr-cTZ">
+            <objects>
+                <viewController title="NewItemViewController" id="9FI-i6-w2N" customClass="NewItemViewController" customModule="labEditingTableViews" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="KLy-YH-mal">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Item" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4U6-PA-YY1">
+                                <rect key="frame" x="64" y="131" width="126" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ssX-9r-MPx">
+                                <rect key="frame" x="64" y="191" width="126" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="G1b-CN-uNG" userLabel="itemTextField">
+                                <rect key="frame" x="264" y="131" width="122" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ect-iB-SeM" userLabel="priceTextField">
+                                <rect key="frame" x="264" y="182" width="122" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ku9-ZW-Gfl">
+                                <rect key="frame" x="64" y="648" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e5a-HD-56h">
+                                <rect key="frame" x="339" y="648" width="49" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Submit"/>
+                                <connections>
+                                    <segue destination="rTI-1d-rIC" kind="unwind" unwindAction="unwindWithSegue:" id="1Z7-4n-GV5"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="fCj-2k-hy7"/>
+                    </view>
+                    <connections>
+                        <outlet property="itemLabel" destination="4U6-PA-YY1" id="6Vp-Tt-ISC"/>
+                        <outlet property="itemTextField" destination="G1b-CN-uNG" id="e3j-vn-g8T"/>
+                        <outlet property="priceTextField" destination="ect-iB-SeM" id="dCb-Gr-iCy"/>
+                        <outlet property="pricelabel" destination="ssX-9r-MPx" id="1lt-ov-aKe"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="twh-lL-3Es" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="rTI-1d-rIC" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="2088" y="121"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ghe-On-4ab">
